overflow fixed

--- a/style.css
+++ b/style.css
@@ -562,6 +562,11 @@ h2 {
 }
 
 @media (max-width: 321px) {
+  .active {
+    transform: translate(130px);
+    width: 20%;
+  }
+
   .user > img {
     width: 50%;
   }
